font change to inter

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -114,6 +115,8 @@
     @apply border-border;
   }
   body {
+    font-family: 'Inter';
+    font-weight: 500;
     @apply bg-background text-foreground;
   }
 }
